Removed dependency for the workshop LuaMission.dll file, as there will be a new one coming with BZCC's future patch.

--- a/TCPlus.ini
+++ b/TCPlus.ini
@@ -8,7 +8,7 @@ modType = "config"
 
 ;asset package dependencies, listed by workshop id
 ;you must upload your asset packs first, then fill this out with their resulting id's before uploading this config mod
-assetDependencies = "2343957554, 2343966391, 2343973853, 2343997862, 1762479746, 2344006579"
+assetDependencies = "2343957554, 2343966391, 2343973853, 2343997862, 2344006579"
 
 ;list of dependencies content
 ;2343997862     TOTAL COMMAND Races assets | 6 races and prop art
